src/parser/CmmParser.java
// Generated from D:/MiUsuario/Escritorio/EclipseStuff/tercero/DLP/Lab04/src/parser\Cmm.g4 by ANTLR 4.8
package parser;

import ast.*;
import ast.definitions.*;
import ast.definitions.subclasses.*;
import ast.expression.*;
import ast.expression.subclasses.*;
import ast.statement.*;
import ast.statement.subclasses.*;
import ast.type.*;
import ast.type.subclasses.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, INT_CONSTANT=37, CHAR_CONSTANT=38, 
		REAL_CONSTANT=39, SINGLE_LINE_COMMENT=40, MULTI_LINE_COMMENT=41, ID=42, 
		SPACE=43;
	public static final int
		RULE_program = 0, RULE_program_definitions = 1, RULE_block = 2, RULE_variable_definition = 3, 
		RULE_function_definition = 4, RULE_function_block = 5, RULE_function_definition_params = 6, 
		RULE_main_function = 7, RULE_write = 8, RULE_read = 9, RULE_statement = 10, 
		RULE_if_statement = 11, RULE_while_loop = 12, RULE_expression = 13, RULE_function_invoke = 14, 
		RULE_list_of_expressions = 15, RULE_type = 16, RULE_multiple_var_definitions = 17, 
		RULE_record_fields = 18, RULE_record_fields_definition = 19, RULE_primitive_type = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program_definitions", "block", "variable_definition", "function_definition", 
			"function_block", "function_definition_params", "main_function", "write", 
			"read", "statement", "if_statement", "while_loop", "expression", "function_invoke", 
			"list_of_expressions", "type", "multiple_var_definitions", "record_fields", 
			"record_fields_definition", "primitive_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "','", "';'", "'void'", "'('", "')'", "'main'", "'write'", 
			"'read'", "'='", "'return'", "'if'", "'else'", "'while'", "'['", "']'", 
			"'-'", "'.'", "'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", 
			"'!='", "'=='", "'&&'", "'||'", "'!'", "'struct'", "'int'", "'char'", 
			"'double'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "INT_CONSTANT", "CHAR_CONSTANT", "REAL_CONSTANT", "SINGLE_LINE_COMMENT", 
			"MULTI_LINE_COMMENT", "ID", "SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public Program_definitionsContext program_definitions;
		public Main_functionContext main_function;
		public Program_definitionsContext program_definitions() {
			return getRuleContext(Program_definitionsContext.class,0);
		}
		public Main_functionContext main_function() {
			return getRuleContext(Main_functionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			((ProgramContext)_localctx).program_definitions = program_definitions();
			setState(43);
			((ProgramContext)_localctx).main_function = main_function();
			 ((ProgramContext)_localctx).program_definitions.ast.add(((ProgramContext)_localctx).main_function.ast); 
			setState(45);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(0,0,((ProgramContext)_localctx).program_definitions.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_definitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();
		public Variable_definitionContext variable_definition;
		public Function_definitionContext function_definition;
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}
		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class,i);
		}
		public Program_definitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_definitions; }
	}

	public final Program_definitionsContext program_definitions() throws RecognitionException {
		Program_definitionsContext _localctx = new Program_definitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_definitions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(54);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(48);
						((Program_definitionsContext)_localctx).variable_definition = variable_definition();
						_localctx.ast.addAll(((Program_definitionsContext)_localctx).variable_definition.ast);
						}
						break;
					case 2:
						{
						setState(51);
						((Program_definitionsContext)_localctx).function_definition = function_definition();
						_localctx.ast.add(((Program_definitionsContext)_localctx).function_definition.ast);
						}
						break;
					}
					} 
				}
				setState(58);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<Statement> ast;
		public StatementContext statement;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				 ((BlockContext)_localctx).ast =  new ArrayList<>(); 
				setState(60);
				match(T__0);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__8) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__17) | (1L << T__31) | (1L << INT_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << REAL_CONSTANT) | (1L << ID))) != 0)) {
					{
					{
					setState(61);
					((BlockContext)_localctx).statement = statement();
					 _localctx.ast.addAll(((BlockContext)_localctx).statement.ast); 
					}
					}
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(69);
				match(T__1);
				}
				break;
			case T__5:
			case T__8:
			case T__9:
			case T__11:
			case T__12:
			case T__14:
			case T__17:
			case T__31:
			case INT_CONSTANT:
			case CHAR_CONSTANT:
			case REAL_CONSTANT:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				 ((BlockContext)_localctx).ast =  new ArrayList<>(); 
				setState(71);
				((BlockContext)_localctx).statement = statement();
				 _localctx.ast.addAll(((BlockContext)_localctx).statement.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_definitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public TypeContext t;
		public Token id1;
		public Token id2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public Variable_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_definition; }
	}

	public final Variable_definitionContext variable_definition() throws RecognitionException {
		Variable_definitionContext _localctx = new Variable_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((Variable_definitionContext)_localctx).t = type(0);
			setState(77);
			((Variable_definitionContext)_localctx).id1 = match(ID);
			_localctx.ast.add( new VarDefinition(((Variable_definitionContext)_localctx).t.ast.getLine(), ((Variable_definitionContext)_localctx).t.ast.getColumn(), (((Variable_definitionContext)_localctx).id1!=null?((Variable_definitionContext)_localctx).id1.getText():null), ((Variable_definitionContext)_localctx).t.ast) );
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(79);
				match(T__2);
				setState(80);
				((Variable_definitionContext)_localctx).id2 = match(ID);
				_localctx.ast.add( new VarDefinition(((Variable_definitionContext)_localctx).t.ast.getLine(), ((Variable_definitionContext)_localctx).t.ast.getColumn(), (((Variable_definitionContext)_localctx).id2!=null?((Variable_definitionContext)_localctx).id2.getText():null), ((Variable_definitionContext)_localctx).t.ast) );
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definitionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Primitive_typeContext primitive_type;
		public Token ID;
		public Function_definition_paramsContext par;
		public Function_blockContext stm;
		public Token v;
		public Primitive_typeContext primitive_type() {
			return getRuleContext(Primitive_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public Function_definition_paramsContext function_definition_params() {
			return getRuleContext(Function_definition_paramsContext.class,0);
		}
		public Function_blockContext function_block() {
			return getRuleContext(Function_blockContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_definition);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__33:
			case T__34:
			case T__35:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				((Function_definitionContext)_localctx).primitive_type = primitive_type();
				setState(90);
				((Function_definitionContext)_localctx).ID = match(ID);
				setState(91);
				((Function_definitionContext)_localctx).par = function_definition_params();
				setState(92);
				((Function_definitionContext)_localctx).stm = function_block();
				((Function_definitionContext)_localctx).ast =  new FuncDefinition((((Function_definitionContext)_localctx).par!=null?(((Function_definitionContext)_localctx).par.start):null).getLine(), (((Function_definitionContext)_localctx).par!=null?(((Function_definitionContext)_localctx).par.start):null).getCharPositionInLine()+1, (((Function_definitionContext)_localctx).ID!=null?((Function_definitionContext)_localctx).ID.getText():null), ((Function_definitionContext)_localctx).primitive_type.ast, ((Function_definitionContext)_localctx).par.ast, ((Function_definitionContext)_localctx).stm.ast);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				((Function_definitionContext)_localctx).v = match(T__4);
				setState(96);
				((Function_definitionContext)_localctx).ID = match(ID);
				setState(97);
				((Function_definitionContext)_localctx).par = function_definition_params();
				setState(98);
				((Function_definitionContext)_localctx).stm = function_block();
				((Function_definitionContext)_localctx).ast =  new FuncDefinition((((Function_definitionContext)_localctx).par!=null?(((Function_definitionContext)_localctx).par.start):null).getLine(), (((Function_definitionContext)_localctx).par!=null?(((Function_definitionContext)_localctx).par.start):null).getCharPositionInLine()+1, (((Function_definitionContext)_localctx).ID!=null?((Function_definitionContext)_localctx).ID.getText():null), new VoidType(((Function_definitionContext)_localctx).v.getLine(), ((Function_definitionContext)_localctx).v.getCharPositionInLine()+1), ((Function_definitionContext)_localctx).par.ast, ((Function_definitionContext)_localctx).stm.ast);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_blockContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<>();
		public Multiple_var_definitionsContext multiple_var_definitions;
		public StatementContext statement;
		public Multiple_var_definitionsContext multiple_var_definitions() {
			return getRuleContext(Multiple_var_definitionsContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Function_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_block; }
	}

	public final Function_blockContext function_block() throws RecognitionException {
		Function_blockContext _localctx = new Function_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__0);
			setState(104);
			((Function_blockContext)_localctx).multiple_var_definitions = multiple_var_definitions();
			 _localctx.ast.addAll(((Function_blockContext)_localctx).multiple_var_definitions.ast); 
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__8) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__17) | (1L << T__31) | (1L << INT_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << REAL_CONSTANT) | (1L << ID))) != 0)) {
				{
				{
				setState(106);
				((Function_blockContext)_localctx).statement = statement();
				 _localctx.ast.addAll(((Function_blockContext)_localctx).statement.ast); 
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definition_paramsContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<>();
		public Primitive_typeContext p;
		public Token i;
		public Primitive_typeContext p2;
		public Token i2;
		public List<Primitive_typeContext> primitive_type() {
			return getRuleContexts(Primitive_typeContext.class);
		}
		public Primitive_typeContext primitive_type(int i) {
			return getRuleContext(Primitive_typeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public Function_definition_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition_params; }
	}

	public final Function_definition_paramsContext function_definition_params() throws RecognitionException {
		Function_definition_paramsContext _localctx = new Function_definition_paramsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_function_definition_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__5);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__33) | (1L << T__34) | (1L << T__35))) != 0)) {
				{
				setState(117);
				((Function_definition_paramsContext)_localctx).p = primitive_type();
				setState(118);
				((Function_definition_paramsContext)_localctx).i = match(ID);
				 _localctx.ast.add( new VarDefinition(((Function_definition_paramsContext)_localctx).p.ast.getLine(), ((Function_definition_paramsContext)_localctx).p.ast.getColumn(), (((Function_definition_paramsContext)_localctx).i!=null?((Function_definition_paramsContext)_localctx).i.getText():null), ((Function_definition_paramsContext)_localctx).p.ast) ); 
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(120);
					match(T__2);
					setState(121);
					((Function_definition_paramsContext)_localctx).p2 = primitive_type();
					setState(122);
					((Function_definition_paramsContext)_localctx).i2 = match(ID);
					 _localctx.ast.add( new VarDefinition(((Function_definition_paramsContext)_localctx).p2.ast.getLine(), ((Function_definition_paramsContext)_localctx).p2.ast.getColumn(), (((Function_definition_paramsContext)_localctx).i2!=null?((Function_definition_paramsContext)_localctx).i2.getText():null), ((Function_definition_paramsContext)_localctx).p2.ast) ); 
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(132);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_functionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token v;
		public Function_blockContext function_block;
		public Function_blockContext function_block() {
			return getRuleContext(Function_blockContext.class,0);
		}
		public Main_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_function; }
	}

	public final Main_functionContext main_function() throws RecognitionException {
		Main_functionContext _localctx = new Main_functionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_main_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			((Main_functionContext)_localctx).v = match(T__4);
			setState(135);
			match(T__7);
			setState(136);
			match(T__5);
			setState(137);
			match(T__6);
			setState(138);
			((Main_functionContext)_localctx).function_block = function_block();
			 ((Main_functionContext)_localctx).ast =  new FuncDefinition(((Main_functionContext)_localctx).v.getLine(), ((Main_functionContext)_localctx).v.getCharPositionInLine()+1, "main", new VoidType(((Main_functionContext)_localctx).v.getLine(), ((Main_functionContext)_localctx).v.getCharPositionInLine()+1), new ArrayList<VarDefinition>(), ((Main_functionContext)_localctx).function_block.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
